Fix misaligned footer

--- a/jsouvakcinybezpecne/static/css/main.css
+++ b/jsouvakcinybezpecne/static/css/main.css
@@ -122,7 +122,8 @@ p.answer {
 
 ul.credits {
   text-align: center;
-  margin-top: 4.5rem; /* 72px; 3*baseline */
+  margin: 4.5rem 0 0; /* 72px; 3*baseline */
+  padding: 0;
   font-size: 0.667rem; /* 10.667px */
   line-height: 1rem; /* 16px; 2/3*baseline */
   list-style: none;
